tried fixing unaligned table. didnt work. giving up

--- a/austria/styles.css
+++ b/austria/styles.css
@@ -128,7 +128,6 @@ ul > li {
 
 #provinces {
     border-collapse: collapse;
-    border-radius: 10px;
 }
 
 table td, table th {
